<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/button_panel"
    android:weightSum="4">
    <Button
        android:id="@+id/add"
        android:text="@string/Add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom" />
    <Button
        android:id="@+id/del"
        android:text="@string/Delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom" />
    <Button
        android:id="@+id/route"
        android:text="@string/route_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom" />
    <Button
        android:id="@+id/about"
        android:text="@string/About"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom" />
</LinearLayout>